--- a/GidroAtlas.Web/Components/App.razor
+++ b/GidroAtlas.Web/Components/App.razor
@@ -66,7 +66,7 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
     <!-- Leaflet Interop -->
-    <script src="js/leafletMap.js"></script>
+    <script src="js/leafletMap.js?v=2.0"></script>
 
     <!-- File Utils -->
     <script src="js/fileUtils.js"></script>
