--- a/GidroAtlas.Web/Components/Layout/NavMenu.razor
+++ b/GidroAtlas.Web/Components/Layout/NavMenu.razor
@@ -1,12 +1,13 @@
 ﻿@inject IJSRuntime JS
 
-<MudNavMenu>
-    <MudNavLink Href="Map" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Map">Карта</MudNavLink>
+<MudNavLink Href="Map" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Map">Карта</MudNavLink>
     @if (isAdmin)
     {
-        <MudNavLink Href="dashboard" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Dashboard" IconColor="Color.Primary">Дашборд</MudNavLink>
+        <MudNavGroup Title="Дашборд" Icon="@Icons.Material.Filled.Dashboard" Expanded="true">
+            <MudNavLink Href="dashboard/resources" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Water">Водные ресурсы</MudNavLink>
+            <MudNavLink Href="dashboard/structures" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Construction">Сооружения</MudNavLink>
+        </MudNavGroup>
     }
-</MudNavMenu>
 
 @code {
     private bool isAdmin = false;
